--- a/slate.html
+++ b/slate.html
@@ -5,10 +5,7 @@
   <link rel="stylesheet" type="text/css" href="slate.css">
   <script>
   function clap() {
-    soundHandle = document.getElementById('soundHandle');
-    soundHandle.src = 'clap.wav';
     soundHandle.play(); 
-    slate = document.getElementById('slate');
     slate.style.backgroundColor = "white";
     setTimeout(function(){slate.style.backgroundColor = "black";}, 200)
   }
@@ -16,7 +13,7 @@
 
 </head>
 <body>
-  <table id="slate" border="4" cellpadding="0" cellspacing="0" style="width: 800px;">
+  <table id="slate" name="slate" border="4" cellpadding="0" cellspacing="0" style="width: 800px;">
     <tbody>
       <tr>
         <td colspan="3" style="height: 100px;" id="clapper">
@@ -60,7 +57,7 @@
   <button id="clap" onclick="clap()">
     Clap
   </button>  
-  <audio id="soundHandle" style="display: none;"></audio>
+  <audio id="soundHandle" name="soundHandle" style="display: none;" src = 'clap.wav'></audio>
   <footer>&copy; 2013 Mustafa Mohsen. Used and distributed under <a href="http://directory.fsf.org/wiki/License:BSD_3Clause">3-Clause BSD License</a></footer>
 </body>
 </html>
